// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventSeries renders conference series with name and number 1`] = `
<div
  className="__InlineList__"
>
  <ul>
    <li
      key="Conference Name"
    >
      <span>
        <span>
          10th
           
          conference
           in the
           
        </span>
        <Link
          to="/conferences?q=series.name:\\"Conference Name\\"&start_date=all"
        >
          Conference Name
        </Link>
         series
      </span>
    </li>
  </ul>
</div>
`;

exports[`EventSeries renders seminar series with name and number 1`] = `
<div
  className="__InlineList__"
>
  <ul>
    <li
      key="Seminar Name"
    >
      <span>
        <span>
          10th
           
          seminar
           in the
           
        </span>
        <Link
          to="/seminars?q=series.name:\\"Seminar Name\\"&start_date=all"
        >
          Seminar Name
        </Link>
         series
      </span>
    </li>
  </ul>
</div>
`;

exports[`EventSeries renders several series 1`] = `
<div
  className="__InlineList__"
>
  <ul>
    <li
      key="Conference 1"
    >
      <span>
        <span>
          P
          art of the 
        </span>
        <Link
          to="/conferences?q=series.name:\\"Conference 1\\"&start_date=all"
        >
          Conference 1
        </Link>
         series
      </span>
       and 
    </li>
    <li
      key="Conference 2"
    >
      <span>
        <span>
          10th
           
          conference
           in the
           
        </span>
        <Link
          to="/conferences?q=series.name:\\"Conference 2\\"&start_date=all"
        >
          Conference 2
        </Link>
         series
      </span>
       and 
    </li>
    <li
      key="Conference 3"
    >
      <span>
        <span>
          p
          art of the 
        </span>
        <Link
          to="/conferences?q=series.name:\\"Conference 3\\"&start_date=all"
        >
          Conference 3
        </Link>
         series
      </span>
    </li>
  </ul>
</div>
`;

exports[`EventSeries renders with only name 1`] = `
<div
  className="__InlineList__"
>
  <ul>
    <li
      key="Conference Name"
    >
      <span>
        <span>
          P
          art of the 
        </span>
        <Link
          to="/conferences?q=series.name:\\"Conference Name\\"&start_date=all"
        >
          Conference Name
        </Link>
         series
      </span>
    </li>
  </ul>
</div>
`;
